--- a/sprt-admin-ui/src/app/app.component.html
+++ b/sprt-admin-ui/src/app/app.component.html
@@ -3,13 +3,15 @@
     <div class="col-md-12">
       <div class="card bg-dark my-5">
         <div class="card-body">
-          <h2 class="card-title text-center text-white py-3">{{ title }}</h2>
-          <h6 class="card-title text-center text-white py-3">Sportovní klub on-line.</h6>
+          <h2 class="card-title text-center text-white py-2">{{ title }}</h2>
+          <p class="card-title text-center text-white">Sportovní klub on-line.</p>
+          <!--
           <ul class="text-center list-inline py-3">
             <li class="list-inline-item">
               <a routerLink="/create-instance" class="btn btn-info">Založení instance</a>
-          </li>
+            </li>
           </ul>
+          -->
         </div>
       </div>
       <main>
