--- a/sprt-admin-ui/src/app/cust-config-form/cust-config-form.component.html
+++ b/sprt-admin-ui/src/app/cust-config-form/cust-config-form.component.html
@@ -1,6 +1,6 @@
-<div class="py-5 text-center">
+<div class="py-4 text-center">
   <h2>Vyzkoušejte zdarma</h2>
-  <p class="lead my-5">Založení vlastní instance systému Sportologic. Níže je potřeba vyplnit základní údaje o organizaci a kontaktní osobě.</p>
+  <p class="lead my-4">Založení vlastní instance systému Sportologic.</p>
 </div>
 
 <!-- Validation msg -->
