--- a/sprt-admin-ui/src/app/cust-config-form/cust-config-form.component.html
+++ b/sprt-admin-ui/src/app/cust-config-form/cust-config-form.component.html
@@ -1,10 +1,10 @@
 <div class="py-4 text-center">
   <h2>Vyzkoušejte zdarma</h2>
-  <p class="lead my-4">Založení vlastní instance systému Sportologic.</p>
+  <p class="lead my-4">Založení vlastní doménu systému Sportologic.</p>
 </div>
 
 <!-- Validation msg -->
-<div *ngIf="validMsgVisible" class="alert alert-warning" role="alert">
+<div *ngIf="validMsg" class="alert alert-warning" role="alert">
   {{ validMsg }}
 </div>
 
@@ -18,6 +18,7 @@
       id="custName" 
       name="custName" 
       maxlength="100"
+      (change)="onCustNameChange($event)"
       required #custName="ngModel">
     <label for="custName">Název</label>
     <div *ngIf="custName.invalid && (custName.dirty || custName.touched)" class="alert alert-danger my-2">
@@ -25,6 +26,14 @@
         Hodnota je povinná!
       </div>
     </div>
+  </div>
+
+  <!-- Future domain -->
+  <div class="form-floating mb-3 my-2" style="height: 20px;">
+    <span style="font-weight: bold">Vaše budoucí doména bude ve tvaru:</span>
+    <span style="margin-left: 10px; background-color: beige">
+      {{ custTargetUrl }}
+    </span>
   </div>
 
   <!-- Organization email -->
