--- a/sprt-admin-ui/src/app/cust-config-result-form/cust-config-result-form.component.html
+++ b/sprt-admin-ui/src/app/cust-config-result-form/cust-config-result-form.component.html
@@ -2,19 +2,13 @@
     <h2>Vyzkoušejte zdarma</h2>
   </div>
 
-<div class="alert alert-success text-center" style="margin-top: 40px;" role="alert">
-    Instance systému sportologic pro vaši organizaci byla úspěšně založena!
+<div class="alert alert-success text-center" style="margin-top: 40px; margin-bottom: 30px;" role="alert">
+    Gratulujeme! Vaše doména systému Sportologic založena a je dostupná zde: <a href="{{ data.newCustData?.custInstanceUrl }}" target="_blank" >{{ data.newCustData?.custInstanceUrl }}</a>
 </div>
 
-<div *ngIf="data.newCustData">
+<div class="text-center" *ngIf="data.newCustData">
     <p>
-        Běží na adrese: <a href="{{ data.newCustData?.custInstanceUrl }}" target="_blank" >{{ data.newCustData?.custInstanceUrl }}</a>
-    </p>
-    <p>
-        Po přihlášení doporučujeme dokončit konfiguraci vašeho prostředí na stránce Nastavení.
-    </p>
-    <p>
-        Veškeré potřebné informace včetně přístupových údajů byly odeslány na email 
+        Veškeré informace včetně přístupových údajů byly odeslány na email 
         <strong>{{ data.newCustData?.custEmail }}</strong>
     </p>
 </div>
