QRCode payment, base service

--- a/scb-ui-zk/src/main/webapp/pages/public/send-mail.zul
+++ b/scb-ui-zk/src/main/webapp/pages/public/send-mail.zul
@@ -27,6 +27,9 @@
 			
 			<button id="submit" label="Submit" disabled="true" />
 		</div>
+		
+		
+		<button label="QRCode" onClick="@command('getQRCodeCmd')" />
 	</div>
 	
 </zk>
