QRCodePayment, template for payment instruction

--- a/scb-ui-zk/src/main/webapp/pages/public/send-mail.zul
+++ b/scb-ui-zk/src/main/webapp/pages/public/send-mail.zul
@@ -30,6 +30,7 @@
 		
 		
 		<button label="QRCode" onClick="@command('getQRCodeCmd')" />
+		<button label="Send payment instruction" onClick="@command('sendPaymentInstructCmd')" />
 	</div>
 	
 </zk>
